[package]
name = "mill_control"
version = "0.1.0"
authors = ["dr0ps <dr0ps@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rusb = "0.6.0"
serialport = "4.0.1"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
lazy_static = "1.4.0"
log = "0.4.14"
simple_logger = "1.16.0"
hidapi = "1.3.0"
glib = "0.14.8"
gtk = "0.14.3"
gdk = "0.14.3"
glium = "0.31.0"
gl_loader = "0.1.2"

[dependencies.gio]
version = "0.14.8"
