[package]
name = "mill_control"
version = "0.1.0"
authors = ["dr0ps <dr0ps@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-2.0-only"
description = "A GUI for using a Tinyg board to control a CNC machine"
homepage = "https://github.com/dr0ps/mill_control"
keywords = ["CNC", "GTK", "GCode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6.0"
serialport = "4.0.1"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.57"
lazy_static = "1.4.0"
log = "0.4.14"
simple_logger = "1.16.0"
hidapi = "1.3.2"
glib = "0.14.8"
gtk4 = "0.3.1"
gdk4 = "0.3.1"
glium = "0.31.0"
gl_loader = "0.1.2"
#gcode = "0.6.1"
gcode = { git = "https://github.com/dr0ps/gcode-rs" }

[dependencies.gio]
version = "0.14.8"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "5568f11"
dependencies = ["gtk", "libusb"]
