[package]
name = "mill_control"
version = "0.1.0"
authors = ["dr0ps <dr0ps@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-2.0-only"
description = "A GUI for using a Tinyg board to control a CNC machine"
homepage = "https://github.com/dr0ps/mill_control"
keywords = ["CNC", "GTK", "GCode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
lazy_static = "1.4.0"
log = "0.4.21"
simple_logger = "4.3.3"
hidapi = "2.6.1"
glib = "0.14.8"
gtk = "0.14.3"
gdk = "0.14.3"
glium = "0.31.0"
gl_loader = "0.1.2"
#gcode = "0.6.1"
gcode = { git = "https://github.com/dr0ps/gcode-rs" }

[dependencies.gio]
version = "0.14.8"
